<resources>
    <string name="app_name">환승견애</string>
    <string name="label_home">홈</string>
    <string name="label_find">탐색</string>
    <string name="label_chat">채팅</string>
    <string name="label_mypage">마이페이지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_add_btn_content_desc_text">이미지 추가 버튼입니다.</string>
    <string name="dog_profile">반려견 프로필</string>
    <string name="register_dog_photo">반려견 사진을 등록해주세요.</string>
    <string name="btn_next">다음</string>
    <string name="image_content_desc_text">원형 이미지입니다.</string>
    <string name="set_location_app_bar">동네설정</string>
    <string name="set_location_title">위치를 등록해주세요</string>
    <string name="set_location_et_hint">ex) 서울특별시 중구 무교동</string>
    <string name="set_location_btn">현재 위치 찾기</string>
    <string name="set_location_btn_img">현재 위치 검색 버튼 이미지</string>
    <string name="set_distance_title">동네 반경 설정</string>
    <string name="set_distance">3km</string>
    <string name="profile">프로필</string>
    <string name="nick_name">닉네임</string>
    <string name="nick_name_hint">최대 13자 이내로 입력하세요.</string>
    <string name="dog_name">반려견 이름</string>
    <string name="register_dog_name_hint">최대 8글자로 입력해주세요.</string>
    <string name="dog_sex">반려견 성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="neuter_check">중성화 여부</string>
    <string name="breed_choice">품종 선택</string>
    <string name="age_choice">나이 선택</string>
    <string name="age">나이</string>
    <string name="breed">품종</string>
    <string name="choose_your_profile_image">프로필 이미지를 선택해주세요</string>
    <string name="register_dog_name_example">ex) 복만이, 하롱이, 사랑이</string>
    <string name="register_dog_name">반려견 이름을 알려주세요</string>
    <string name="register_dog_age">반려견 나이를 알려주세요</string>
    <string name="register_dog_sex">반려견 성별을 알려주세요</string>
    <string name="register_dog_sex_explain">중성화를 했다면 중성화 여부를 체크해주세요</string>
    <string name="register_tag_explain">최대 3개까지 선택 가능합니다</string>
    <string name="register_dog_age_explain">설정 가능한 최대 나이는 20살입니다</string>
    <string name="register_dog_breed">반려견 품종을 알려주세요</string>
    <string name="register_dog_breed_explain">해당하는 품종이 없으면 기타를 선택해주세요</string>
    <string name="bottom_sheet_indicator">bottom sheet indicator 입니다</string>
    <string name="register_choose_age">나이 선택</string>
    <string name="register_dislike_tag_label">반려견이 싫어하는 태그를 골라주세요</string>
    <string name="register_like_tag_label">반려견이 좋아하는 태그를 골라주세요</string>
    <string name="login_signup_btn">카카오톡으로 로그인</string>
    <string name="login_greeting_text">환영합니다.\n환승견애 멤버가 되어주세요!</string>
    <string name="dialog_logout_title">로그아웃 하시겠습니까?</string>
    <string name="dialog_logout_cancel_btn">취소</string>
    <string name="dialog_logout_ok_btn">확인</string>
    <string name="dialog_splash_title">네트워크 상태가 좋지 않아요</string>
    <string name="dialog_splash_subtitle">네트워크 확인 후 다시 시도해주세요</string>
    <string name="dialog_splash_ok_btn">확인</string>
    <string name="dialog_withdrawal_title">정말 탈퇴하시겠습니까?</string>
    <string name="dialog_withdrawal_subtitle">다시 한 번 생각해주세요</string>
    <string name="dialog_withdrawal_subtitle_emoji">우는 이모티콘</string>
    <string name="dialog_withdrawal_cancel_btn">취소</string>
    <string name="dialog_withdrawal_ok_btn">탈퇴</string>
    <string name="onboarding_title_1">동네 강아지들에게\n좋아요를 보내보세요!</string>
    <string name="onboarding_subtitle_1">카드를 왼쪽으로 스와이프 하면 싫어요,\n오른쪽으로 스와이프 하면 좋아요를 보내요.</string>
    <string name="onboarding_title_2">내 강아지를 좋아요한 사람들과\n채팅을 시작해보세요!</string>
    <string name="onboarding_subtitle_2">대화를 시작하면 채팅방이 활성화되고,\n프로필을 눌러 반려견 리스트를 확인할 수 있어요.</string>
    <string name="onboarding_title_3">내 주변 3km 이내의\n사람들과 손을 흔들어보세요!</string>
    <string name="onboarding_subtitle_3">내 주변 탐색을 눌러 채팅방이 활성화된 사람들과\n실시간으로 위치를 확인하고, 손을 흔들어보세요.</string>
    <string name="onboarding_title_4">이제 내 주변에 어떤\n강아지들이 있는지 확인해볼까요?</string>
    <string name="onboarding_subtitle_4">환승견애를 통해 다양한 강아지들을 만나보세요!</string>
    <string name="mypage_settings_icon">설정 아이콘</string>
    <string name="mypage_user_profile">사용자 프로필</string>
    <string name="mypage_user_profile_edit">사용자 프로필 수정 선택</string>
    <string name="mypage_my_title">MY</string>
    <string name="mypage_dog_manage_icon">반려견 관리 아이콘</string>
    <string name="mypage_dog_manage">반려견 관리</string>
    <string name="mypage_dog_manage_select">반려견 관리 선택</string>
    <string name="mypage_my_location_setting_icon">내 위치 설정 아이콘</string>
    <string name="mypage_user_location_setting">내 위치 설정</string>
    <string name="mypage_user_location_setting_select">내 위치 설정 선택</string>
    <string name="mypage_etc_title">기타</string>
    <string name="mypage_inquire_icon">1:1 문의 아이콘</string>
    <string name="mypage_inquire">1:1 문의</string>
    <string name="mypage_inquire_select">1:1 문의 선택</string>
    <string name="mypage_app_info_icon">앱 정보 아이콘</string>
    <string name="mypage_app_info">앱 정보</string>
    <string name="mypage_app_info_select">앱 정보 선택</string>
    <string name="settings_title">설정</string>
    <string name="settings_alarm_title">알림 전체</string>
    <string name="settings_push_alarm_title">푸쉬 알림</string>
    <string name="settings_push_alarm_detail">내 강아지가 좋아요를 받았을 때 알림이 오지 않아요</string>
    <string name="settings_push_alarm_switch">푸쉬 알림 스위치</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_withdrawal">회원 탈퇴</string>
    <string name="withdrawal_title">회원 탈퇴</string>
    <string name="withdrawal_subtitle_first">환승견애를</string>
    <string name="withdrawal_guide_text">탈퇴 안내 문구</string>
    <string name="withdrawal_subtitle_second_red">탈퇴</string>
    <string name="withdrawal_subtitle_second">하시나요?</string>
    <string name="withdrawal_notice_first">계정을 삭제하면 회원님의 모든 활동 내역이 삭제됩니다.</string>
    <string name="withdrawal_notice_text">탈퇴 경고 문구</string>
    <string name="withdrawal_notice_second">삭제된 정보는 다시 복구할 수 없으니 신중하게 결정해주세요.</string>
    <string name="withdrawal_button">탈퇴하기</string>
    <string name="user_profile_edit_title">내 정보 수정</string>
    <string name="user_profile_edit_image">사용자 프로필</string>
    <string name="user_profile_edit_select">사용자 프로필 이미지 선택</string>
    <string name="user_profile_email_title">이메일</string>
    <string name="user_profile_edit_email_text">사용자 이메일 입력란</string>
    <string name="user_profile_edit_nickname_title">닉네임</string>
    <string name="user_profile_edit_nickname_text">사용자 닉네임 입력란</string>
    <string name="user_profile_edit_button">수정하기</string>
    <string name="user_profile_edit_nickname_hint">최대 13자 이내로 입력하세요.</string>
    <string name="user_profile_edit_nickname_hint_text">사용자 닉네임 입력 힌트</string>
    <string name="home_dog_dislike">관심없어요</string>
    <string name="home_dog_like">관심 있어요</string>
    <string name="user_location_dog_location_explain">강아지를 보여줄 동네 반경을 설정하세요</string>
    <string name="dialog_loading">로딩 중입니다.</string>
    <string name="dog_neuter">중성화</string>
    <string name="dog_photo">강아지 이미지</string>
    <string name="dog_dislike">관심 없어요</string>
    <string name="dog_like">관심 있어요</string>
    <string name="dog_location">근처의 강아지를 보여드려요</string>
    <string name="no_card">모든 카드를 넘겼어요</string>
    <string name="no_card_refresh">4시간 후 카드가 갱신됩니다!</string>
    <string name="register_nick_name_label">사용할 닉네임을 알려주세요</string>
    <string name="register_nick_name_example">ex) 스벅마니아, 덴마크당나귀</string>
    <string name="register_user_image_explain">프로필 아이콘을 선택해주세요</string>
    <string name="register_btn_finish">완료</string>
    <string name="edit_btn_finish">수정</string>
    <string name="item_card_like_overlay">관심 있어요 오버레이 리소스</string>
    <string name="item_card_dislike_overlay">관심 없어요 오버레이 리소스</string>
    <string name="mypage_user_distance_setting">반경 설정</string>
    <string name="distance_finish">완료</string>
    <string name="chat_tap_title">채팅</string>
    <string name="chat_liked_people_title">내 강아지를 좋아한 사람들</string>
    <string name="chat_chat_list">채팅 목록</string>
    <string name="dog_management_title">반려견 관리</string>
    <string name="dog_edit_neuter">중성화</string>
    <string name="dog_edit_like">Like</string>
    <string name="dog_edit_dislike">Dislike</string>
    <string name="dog_edit_comment_title">자기소개</string>
    <string name="dog_edit_info_title">기본 정보</string>
    <string name="dog_management_list_dog_photo">리스트에서 강아지 프로필 사진이 들어가는 imageView 입니다.</string>
    <string name="dialog_btn_ok">확인</string>
    <string name="dialog_dog_name_edit_title">이름을 변경해주세요</string>
    <string name="dog_profile_edit_toolbar">반려견 프로필 수정</string>
    <string name="default_notification_channel_id" translatable="false">환승견애</string>
    <string name="add_dog_profile">반려견 추가</string>
    <string name="edit_location_title">내 위치 설정하기</string>
    <string name="edit_location_subtitle">우리 동네 강아지들을 볼 수 있어요</string>
    <string name="delete">삭제</string>
    <string name="report_toolbar">신고</string>
    <string name="report_title">신고 이유가 무엇인가요?</string>
    <string name="report_reason">해당하는 이유를 선택해주세요</string>
    <string name="report_not_noticed">상대방에게 신고 사실이 공개되지 않습니다.</string>
    <string name="report_report">신고하기</string>
    <string name="chat_report_dialog_reason_title">이유를 작성해주세요.</string>
    <string name="chat_report_dialog_reason_hint">ex) 금전적 요구, 심한 욕설</string>
    <string name="reporting">신고하기</string>
    <string name="leave_chatroom">채팅방 나가기</string>
    <string name="chatroom_message_explanation">메세지를 작성하세요</string>
    <string name="chat_menu">채팅방 메뉴</string>
    <string name="tv_chat_exit_bottom_sheet_report_title">신고</string>
    <string name="tv_chat_exit_bottom_sheet_report_content">해당 사용자를 차단하고 채팅방이 사라져요</string>
    <string name="tv_chat_exit_bottom_sheet_exit_title">채팅방 나가기</string>
    <string name="tv_chat_exit_bottom_sheet_exit_content">채팅방이 사라져요</string>
    <string name="tv_chat_exit_bottom_sheet_unmatch_title">매칭 취소</string>
    <string name="tv_chat_exit_bottom_sheet_unmatch_content"> 서로의 강아지를 더 이상 볼 수 없고 채팅방이 사라져요</string>
    <string name="iv_chat_exit_unmatch">채팅 나가기 옵션 중 매칭 취소 이미지</string>
    <string name="iv_chat_exit_exit">채팅 나가기 옵션 중 나가기 이미지</string>
    <string name="iv_chat_exit_report">채팅 나가기 옵션 중 신고 이미지</string>
    <string name="tv_chat_report_subtitle">불량 유저를 신고해주시면 자세히 검토하겠습니다.</string>
    <string name="chat_try_talk">지금 당장 대화를 시작해보세요</string>
    <string name="add_dog_name_label">이름</string>
    <string name="add_star">*</string>
    <string name="add_dog_sex_label">성별</string>
    <string name="add_dog_age_label">나이</string>
    <string name="add_tag"># 태그 추가</string>
    <string name="toolbar_add_dog_title">반려견 추가</string>
    <string name="chat_empty_view_title">지금 하트를 보내보세요</string>
    <string name="chat_empty_view_subtitle">다른 사람들과 매치되면 이곳에 표시되고, 메세지를 보낼 수 있습니다.</string>
    <string name="partner_introduction_title">자기소개</string>
    <string name="terms_title_first_line">환승견애</string>
    <string name="terms_title_second_line">약관내용에 동의해주세요</string>
    <string name="terms_total_agree">전체동의</string>
    <string name="terms_first_agree">(필수) 서비스 이용약관 동의</string>
    <string name="terms_second_agree">(필수) 개인정보 처리방침</string>
    <string name="terms_third_agree">(필수) 위치기반서비스 이용약관</string>
    <string name="button_agree">동의하기</string>
    <string name="chat_list_empty_view_title">채팅방이 없어요</string>
    <string name="chat_list_empty_view_subtitle">내 강아지를 좋아요 한 사람들과 대화를 시작해보세요</string>
    <string name="setting_alarm_title">푸시 알림</string>
    <string name="setting_alarm_all">알림 전체</string>
    <string name="setting_alarm_all_sub">모든 알림이 오지 않아요</string>
    <string name="setting_alarm_like">좋아요 알림</string>
    <string name="setting_alarm_chat">채팅 알림</string>
    <string name="setting_alarm_chat_sub">채팅 알림이 오지 않아요</string>
    <string name="setting_alarm_wave">손 흔들기 알림</string>
    <string name="setting_alarm_wave_sub">나에게 손을 흔들었을 때 알림이 오지 않아요</string>
    <string name="setting_service_first_terms">서비스 이용약관</string>
    <string name="setting_service_second_terms">개인정보 저리방침</string>
</resources>