<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/bottom_sheet_indicator"
            android:src="@drawable/ic_bottom_sheet_indicator" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_chat_exit_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_chat_exit_report"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/iv_chat_exit_report"
                    android:src="@drawable/ic_report"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_chat_exit_report_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_report_title"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_chat_exit_report"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_report_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_chat_exit_report_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_chat_exit_report_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_chat_exit_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/iv_chat_exit_exit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/iv_chat_exit_exit"
                    android:src="@drawable/ic_exit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_chat_exit_exit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_exit_title"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_chat_exit_exit"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_exit_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_chat_exit_exit_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_chat_exit_exit_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_chat_exit_unmatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/iv_chat_exit_unmatch"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/iv_chat_exit_unmatch"
                    android:src="@drawable/ic_unmatch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_chat_exit_unmatch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_unmatch_title"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_chat_exit_unmatch"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_chat_exit_bottom_sheet_unmatch_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_chat_exit_unmatch_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_chat_exit_unmatch_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>