<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        tools:context=".presentation.register.fragment.UserLocationFragment">



        <TextView
            app:layout_constraintVertical_bias="0.1"
            android:id="@+id/tv_user_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_location_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_location_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_location"
            app:layout_constraintTop_toBottomOf="@id/tv_user_location_title"
            app:layout_constraintStart_toStartOf="@id/tv_user_location_title"
            android:layout_marginTop="6dp"
            />

        <TextView
            app:layout_goneMarginTop="14dp"
            android:id="@+id/tv_my_location"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_yellow_round_stroke"
            android:gravity="center_vertical"
            android:hint="@string/set_location_et_hint"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_location_explain" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/set_location_btn"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_female"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_location" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_next_button"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>