<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white_r16"
        android:gravity="center"
        android:minWidth="290dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dialog_splash_title"
            android:textColor="@color/G900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dialog_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/dialog_splash_subtitle"
            android:textColor="@color/G500"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_dialog_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_dialog_yellow_r8"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/dialog_splash_ok_btn"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>