<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        tools:context=".presentation.register.fragment.DogNameFragment">

        <TextView
            android:id="@+id/tv_dog_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_dog_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_dog_name_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/register_dog_name_example"
            app:layout_constraintStart_toStartOf="@id/tv_dog_name_label"
            app:layout_constraintTop_toBottomOf="@id/tv_dog_name_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dog_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_dog_name_example">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_dog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_dog_name_hint"
                android:maxLength="8"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_next_button"
            android:enabled="false"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>